@@ -25,6 +25,8 @@
         * [BUGFIX]: Fixed staring edition of data in grid by pressing Enter key.
         * [BUGFIX]: #2745 Fixed crash when ctrl+right_clicking in SQL editor.
         * [BUGFIX]: #2733 Fixed handling of foreign keys when changing table structure.
+        * [BUGFIX]: #2749 Fixed handling of function(distinct arg), resulting in incorrect results when executed.
+        * [BUGFIX]: Fixed logging SQL queries when --debug-sql is enabled. Queries from query executor were not logged.
 
 [3.0.1]
         * [ADDED]: When the data is being read into the Gird View, columns width gets automatically adjusted, so for small values they are shrinked and for bigger values they're enlarged, but never above the configured limit (a new option in config dialog).
